Use JUnit Platform by default (#3053)